# RetroMedia

./: README.md  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
retromedia/: build.gradle
retromedia-native/: CMakeLists.txt  build.gradle
retromedia-native/src/main/: AndroidManifest.xml
retromedia-native/src/main/cpp/: Decoder.cpp  Decoder.h  JniBridge.cpp  VideoBufferWrapper.cpp  VideoSource.cpp  VideoSource.h  VideoSourceFile.cpp  VideoSourceFile.h  VideoType.h  log.c  log.h  media-native.cpp
retromedia-native/src/main/cpp/common/: AVBufferTest.cpp  BaseType.h  Buffer.cpp  Buffer.h  BufferPool.cpp  BufferPool.h  DebugHelper.cpp  DebugHelper.h  JNIHelper.cpp  JNIHelper.h  MessageQueue.cpp  MessageQueue.h  MetaData.cpp  MetaData.h  Reference.cpp  Reference.h  TexBufferPool.cpp  TexBufferPool.h  VideoBufferPool.cpp  VideoBufferPool.h  log_defs.h
retromedia-native/src/main/cpp/common/gl/: Description.cpp  Description.h  Flattenable.h  GLES10RenderEngine.cpp  GLES10RenderEngine.h  GLES11RenderEngine.cpp  GLES11RenderEngine.h  GLES20RenderEngine.cpp  GLES20RenderEngine.h  GLExtensions.cpp  GLExtensions.h  GlUtils.cpp  GlUtils.h  Mesh.cpp  Mesh.h  Point.h  Program.cpp  Program.h  ProgramCache.cpp  ProgramCache.h  Rect.cpp  Rect.h  Region.cpp  Region.h  RegionHelper.h  RenderEngine.cpp  RenderEngine.h  TMatHelpers.h  TVecHelpers.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  TypeHelpers.h  mat4.h  util.h  vec2.h  vec3.h  vec4.h
retromedia-native/src/main/cpp/engine/: MediaEngine.cpp  MediaEngine.h
retromedia-native/src/main/cpp/macro/: macro.h
retromedia-native/src/main/cpp/old/: JniBridge.cpp  JniBridge.h  VideoBufferWrapper.cpp  VideoBufferWrapper.h  VideoSource.cpp  VideoSource.h  VideoSourceFile.cpp  VideoSourceFile.h  VideoType.h
retromedia-native/src/main/cpp/source/: CameraMediaSource.cpp  CameraMediaSource.h  MediaSource.cpp  MediaSource.h  TextureDrawer.cpp  TextureDrawer.h
retromedia-native/src/main/cpp/source/android/: CameraMediaSourceOnAndroid.cpp  CameraMediaSourceOnAndroid.h  JavaDeliver.cpp  JavaDeliver.h
retromedia-native/src/main/cpp/source/android/j4a/: buffer.c  buffer.h  camera_wrapper.c  camera_wrapper.h  i_deliver.c  i_deliver.h  j4a_base.h
retromedia-native/src/main/java/com/media/gankers/medianative/: Buffer.java  CameraMediaSource.java  CameraWrapper.java  FileSource.java  IDeliver.java  ISink.java  ISource.java  MediaNative.java  OpenGlEnv.java  TextureBuffer.java  TextureDrawer.java  VideoBuffer.java  WindowRender.java
retromedia-native/src/main/prebuilt/include/ffmpeg-header/: config.h  version.h
retromedia-native/src/main/prebuilt/include/ffmpeg-header/libavutil/: intfloat_readwrite.h
retromedia-native/src/main/prebuilt/include/ffmpeg-header/libswscale/: swscale_internal.h
retromedia-native/src/main/res/values/: strings.xml
retromedia/src/androidTest/java/com/media/gankers/retromedia/: ExampleInstrumentedTest.java
retromedia/src/main/: AndroidManifest.xml
retromedia/src/main/java/com/media/gankers/retromedia/: RetroMedia.java
retromedia/src/main/java/com/media/gankers/retromedia/consumer/: MediaConsumer.java  RenderView.java
retromedia/src/main/java/com/media/gankers/retromedia/consumer/surface/: SurfaceRenderView.java
retromedia/src/main/java/com/media/gankers/retromedia/consumer/texture/: TextureRenderView.java
retromedia/src/main/java/com/media/gankers/retromedia/controls/: DurationCropView.java  HolderRecordView.java
retromedia/src/main/java/com/media/gankers/retromedia/define/: CropOperation.java  FrameFormat.java  PlaySpeed.java  ProgressListener.java  WorkFlowType.java
retromedia/src/main/java/com/media/gankers/retromedia/extract/: ExtractCallback.java  ExtractMode.java  MediaExtractor.java
retromedia/src/main/java/com/media/gankers/retromedia/flow/: FlowInterceptor.java  ProcessingFlow.java
retromedia/src/main/java/com/media/gankers/retromedia/flow/algo/: AlgorithmInterceptor.java
retromedia/src/main/java/com/media/gankers/retromedia/flow/canvas/: CanvasInterceptor.java
retromedia/src/main/java/com/media/gankers/retromedia/flow/effects/: EffectInterceptor.java  Effects.java  GussianInteceptor.java  WaveInterceptor.java
retromedia/src/main/java/com/media/gankers/retromedia/flow/train/: TrainInterceptor.java
retromedia/src/main/java/com/media/gankers/retromedia/format/: FormatTransformer.java  Intention.java  TransformCallback.java
retromedia/src/main/java/com/media/gankers/retromedia/interceptors/: Interceptor.java
retromedia/src/main/java/com/media/gankers/retromedia/interceptors/algo/: AlgorithmInterceptor.java
retromedia/src/main/java/com/media/gankers/retromedia/interceptors/canvas/: CanvasInterceptor.java
retromedia/src/main/java/com/media/gankers/retromedia/interceptors/effects/: EffectInterceptor.java  Effects.java  GussianInteceptor.java  WaveInterceptor.java
retromedia/src/main/java/com/media/gankers/retromedia/interceptors/train/: TrainInterceptor.java
retromedia/src/main/java/com/media/gankers/retromedia/producer/: FrameFormat.java  ITexture.java  MediaCallback.java  MediaController.java  MediaProducer.java  MediaProvider.java  VideoFrame.java
retromedia/src/main/java/com/media/gankers/retromedia/producer/callback/: MediaCallback.java  SnapCallback.java
retromedia/src/main/java/com/media/gankers/retromedia/render/: RenderView.java  ViewController.java
retromedia/src/main/java/com/media/gankers/retromedia/utils/: Utils.java
retromedia/src/main/java/com/media/gankers/retromedia/workflow/: WorkFlow.java
retromedia/src/main/res/values/: strings.xml
retromedia/src/test/java/com/media/gankers/retromedia/: ExampleUnitTest.java
sample/: build.gradle
sample/src/androidTest/java/com/media/gankers/retromedia/: ExampleInstrumentedTest.java
sample/src/main/: AndroidManifest.xml
sample/src/main/java/com/media/gankers/retromedia/: MainActivity.java
sample/src/main/java/com/media/gankers/sample/: MainActivity.java
sample/src/main/res/layout/: activity_main.xml
sample/src/main/res/values/: strings.xml
(+18 files in other folders)
